// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a_expr 1`] = `
Object {
  "deparse": "a = b",
}
`;

exports[`func_call 1`] = `
Object {
  "func_call": Object {
    "FuncCall": Object {
      "args": Array [],
      "funcname": Array [
        Object {
          "String": Object {
            "str": "dan",
          },
        },
      ],
    },
  },
}
`;

exports[`func_call deparse 1`] = `
Object {
  "deparse": "dan ()",
}
`;

exports[`funccal 1`] = `
Object {
  "funccall": Object {
    "FuncCall": Object {
      "args": Array [],
      "funcname": Array [
        Object {
          "String": Object {
            "str": "dan",
          },
        },
      ],
    },
  },
}
`;

exports[`funccal deparse 1`] = `
Object {
  "deparse": "dan ()",
}
`;

exports[`set expr 1`] = `
Object {
  "deparse": "a = b",
}
`;

exports[`type_cast 1`] = `
Object {
  "deparse": "NULL::text[]",
}
`;

exports[`type_name 1`] = `
Object {
  "deparse": "text",
}
`;

exports[`typecast 1`] = `
Object {
  "deparse": "NULL::text[]",
}
`;

exports[`typename 1`] = `
Object {
  "deparse": "text",
}
`;
